Ajout de editcommande modifications dans newcomfact, editclient,commandes

--- a/src/app/components/commandes/commandes.component.html
+++ b/src/app/components/commandes/commandes.component.html
@@ -1,1 +1,10 @@
-<p>commandes works!</p>
+<form (ngSubmit)="onSearch()" class="form-inline">
+  <label>NUMERO DE COMMANDE</label>
+  <input [(ngModel)]="numcommande" name="numcommande" type="text" >
+  <button class="btn btn-sm btn-outline-info m-lg-2">
+    <span class = "fa fa-search"> </span>
+  </button>
+</form>
+<ng-container *ngIf="comfact">
+  <app-editcommande [comfact] ="comfact"></app-editcommande>
+</ng-container>
