--- a/src/app/components/editclient/editclient.component.html
+++ b/src/app/components/editclient/editclient.component.html
@@ -112,5 +112,7 @@
       Aucune commande pour ce client
     </ng-template>
   </ng-container>
+  <app-newcomfact [cliact]="clientFormGroup" (newComfact)="onAddComfact($event)"></app-newcomfact>
 </div>
+
 
